# xbox-smartglass-core-rust

./: Cargo.toml
.github/workflows/: rust.yml
src/: constants.rs  crypto.rs  lib.rs  serialize.rs  sgcrypto.rs  state.rs  util.rs
src/packet/: factory.rs  message.rs  mod.rs  simple.rs
src/packet/test/: discovery_response
src/test/: secret
tests/: message.rs  simple.rs
tests/data/message/: json
